[package]
name = "wire-e2e-identity"
description = "Public API for Wire end to end identity"
version = "0.13.0"
edition = "2024"
repository = "https://github.com/wireapp/rusty-jwt-tools"
license = "MPL-2.0"
publish = false

[lints]
workspace = true

[dependencies]
# TODO: we depend on the whole keystore crate, but actually
# only need keystore traits. Once keystore traits are moved
# to a standalone crate, we can replace this dependency.
# See WPB-23172.
core-crypto-keystore.workspace = true

async-trait.workspace = true
async-lock.workspace = true
sha1.workspace = true
spki = { version = "0.7", features = ["pem", "fingerprint"] }
openmls_traits.workspace = true
rusty-jwt-tools.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
jwt-simple.workspace = true
derive_more = { workspace = true, features = ["deref", "from", "into"] }
url.workspace = true
zeroize.workspace = true
uuid.workspace = true
x509-cert = { workspace = true, features = ["builder", "hazmat"] }
time = { workspace = true, features = [
  "serde",
  "serde-well-known",
  "wasm-bindgen",
] }
rand = { workspace = true, optional = true }
ed25519-dalek.workspace = true
signature.workspace = true
log.workspace = true
ecdsa.workspace = true
p256.workspace = true
p384.workspace = true
p521.workspace = true
pem.workspace = true
getrandom = { workspace = true, features = ["js"] }
web-time.workspace = true
hex.workspace = true
flagset.workspace = true
certval.workspace = true
der.workspace = true
const-oid.workspace = true
base64.workspace = true

[dev-dependencies]
argon2 = "0.5"
password-hash = { version = "0.5", features = ["getrandom"] }
env_logger.workspace = true
wire-e2e-identity = { version = "0.13.0", path = ".", features = ["builder"] }
rusty-jwt-tools = { workspace = true, features = ["test-utils", "rsa"] }
url.workspace = true
itertools.workspace = true
uuid.workspace = true
wasm-bindgen-test.workspace = true
hex.workspace = true
shlex = "1"

openidconnect.workspace = true
scraper.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["macros"] }
pem.workspace = true
rand.workspace = true
rstest.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
reqwest = { workspace = true, features = ["json", "cookies"] }
tokio = { workspace = true, features = ["macros"] }
hyper = { workspace = true, features = ["server"] }
native-tls = { workspace = true, features = ["vendored"] }
oauth2 = { workspace = true, features = ["reqwest"] }
http.workspace = true
keycloak.workspace = true
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
testcontainers = { workspace = true, features = ["reusable-containers"] }

[target.'cfg(target_family = "wasm")'.dependencies.uuid]
workspace = true
features = ["std", "js"]

[features]
default = []
builder = ["rusty-jwt-tools/test-utils"]
