[package]
name = "interop"
version = "7.0.0"
edition = "2024"
license = "GPL-3.0-only"

[features]
default = ["proteus"]
proteus = [
    "dep:proteus-wasm",
    "core-crypto/cryptobox-migrate",
    "core-crypto/proteus",
]

[lints]
workspace = true

[dependencies]
color-eyre = "0.6"
log = "0.4"
env_logger = "0.11"
core-crypto = { path = "../crypto" }
core-crypto-ffi = { path = "../crypto-ffi" }
openmls.workspace = true
tls_codec.workspace = true

# Utils
async-trait.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
const_format.workspace = true
rand.workspace = true
bitflags.workspace = true
uuid = { workspace = true, features = ["v4"] }
tempfile = { version = "3.20" }
spinoff = { version = "0.8", features = [
    "aesthetic",
], default-features = false }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-fs = "2.1"
tokio = { version = "1.46", features = ["full"] }
# Http Server
warp = { version = "0.3", default-features = false }
fantoccini = "0.22"
proteus-wasm = { workspace = true, optional = true }
which = "8.0.0"
tree-sitter = "0.25.8"
tree-sitter-typescript = "0.23.2"

[target.'cfg(not(target_family = "wasm"))'.build-dependencies]
cc = "1.2.29"
