[package]
name = "keystore-dump"
description = "Dumps a keystore to JSON on stdout"
version = "7.0.0"
edition = "2024"
license = "GPL-3.0-only"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
color-eyre = "0.6"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
core-crypto-keystore = { workspace = true, features = ["serde"] }
core-crypto = { path = "../crypto" }

clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json.workspace = true
serde.workspace = true
postcard = { version = "1.1", default-features = false, features = ["use-std"] }
hex.workspace = true
serde-transcode = "1"

openmls = { workspace = true, features = ["crypto-subtle"] }
openmls_traits.workspace = true
openmls_basic_credential.workspace = true
openmls_x509_credential.workspace = true
tls_codec.workspace = true

chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies.proteus-wasm]
workspace = true
features = ["hazmat", "serde"]
