[package]
name = "keystore-dump"
description = "Dumps a keystore to JSON on stdout"
version = "9.0.1"
edition = "2024"
license = "GPL-3.0-only"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
core-crypto-keystore = { workspace = true }
core-crypto = { path = "../crypto" }

clap = { version = "4", features = ["derive"] }
serde_json.workspace = true
serde.workspace = true
postcard = { version = "1.1", default-features = false, features = ["use-std"] }
hex.workspace = true
serde-transcode = "1"
macro_rules_attribute.workspace = true
smol-macros.workspace = true

openmls = { workspace = true, features = ["crypto-subtle"] }
openmls_traits.workspace = true
openmls_basic_credential.workspace = true
openmls_x509_credential.workspace = true
tls_codec.workspace = true

chrono = { version = "0.4", default-features = false, features = [
  "std",
  "serde",
] }

[target.'cfg(not(target_family = "wasm"))'.dependencies.proteus-wasm]
workspace = true
features = ["hazmat", "serde"]
