[package]
name = "core-crypto-keystore"
description = "Encrypted keystore with support for OpenMLS and Proteus"
repository = "https://github.com/wireapp/core-crypto"
version = "9.0.1"
edition = "2024"
license = "GPL-3.0-only"
publish = false

[lints]
workspace = true

[features]
default = ["proteus-keystore"]
proteus-keystore = ["dep:proteus-traits"]
log-queries = ["rusqlite/trace"]
# kept here because legacy keystore module is using this feature.
serde = []
dummy-entity = []

[dependencies]
thiserror.workspace = true
derive_more.workspace = true
hex.workspace = true
zeroize = { workspace = true, features = ["zeroize_derive"] }
async-trait.workspace = true
async-lock.workspace = true
postcard = { version = "1.1", default-features = false, features = ["use-std"] }
sha2.workspace = true
serde_json.workspace = true
core-crypto-macros.workspace = true
rand = { workspace = true, features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
obfuscate = { workspace = true, features = ["openmls"] }
openmls = { workspace = true }
x509-cert = { workspace = true }
openmls_traits = { workspace = true }
openmls_basic_credential = { workspace = true }
openmls_x509_credential = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
proteus-traits = { workspace = true, optional = true }
itertools.workspace = true
aes-gcm = "0.10"
twox-hash = { version = "2.1.2", default-features = false, features = [
  "alloc",
  "xxhash3_128",
] }

[target.'cfg(target_os = "ios")'.dependencies]
security-framework = "3.5"
security-framework-sys = "2.15"
core-foundation = "0.10"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-fs = "2.2"
blocking = "1.6"

[target.'cfg(not(target_family = "wasm"))'.dependencies.rusqlite]
version = "0.37"
default-features = false
features = [
  "bundled-sqlcipher-vendored-openssl",
  "blob",
  "limits",
  "unlock_notify",
  "uuid",
  "functions",
]

[target.'cfg(not(target_family = "wasm"))'.dependencies.refinery]
version = "0.9"
default-features = false
features = ["rusqlite"]

[target.'cfg(target_family = "wasm")'.dependencies]
idb.workspace = true
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
web-time = "1.1.0"

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
uuid = { workspace = true, features = ["v4", "js"] }
openmls = { workspace = true, features = ["crypto-subtle"] }
rstest = "0.26"
rstest_reuse = "0.7"
futures-lite = "2.6"
core-crypto-keystore = { path = ".", features = ["log-queries"] }
env_logger = "0.11"
proteus-wasm = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
smol-macros.workspace = true
macro_rules_attribute.workspace = true
tempfile = "3.25.0"
smol.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies.criterion]
version = "0.8"
features = ["async_futures", "html_reports"]

[target.'cfg(target_family = "wasm")'.dev-dependencies]
console_error_panic_hook = "0.1"
