[package]
name = "mls-library-benches"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
crc32fast = "1.5.0"
mls-rs = "0.49.0"
openmls.workspace = true
rand = "0.9.1"
rand_distr = "0.5.1"

[lints]
workspace = true

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "decrypt"
harness = false
