[package]
name = "mls-library-benches"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
crc32fast = "1.5.0"
mls-rs = "0.49.0"
mls-rs-crypto-rustcrypto = { version = "0.17.0", default-features = false, features = ["std"] }
openmls = "0.6.0"
openmls_basic_credential = "0.3.0"
openmls_rust_crypto = "0.3.0"
openmls_traits = "0.3.0"
rand = "0.9.1"
rand_distr = "0.5.1"

[lints]
workspace = true

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "decrypt"
harness = false
