[package]
name = "mls-crypto-provider"
description = "MLS Crypto Provider wrapping core-crypto-keystore"
repository = "https://github.com/wireapp/core-crypto"
version = "1.0.0-pre.7"
edition = "2021"
license = "GPL-3.0-only"
publish = false

[lib]
name = "mls_crypto_provider"
crate-type = ["lib", "cdylib"]

[features]
default = []
raw-rand-access = [] # TESTING ONLY

[dependencies]
openmls_traits = "0.1"
tls_codec = { workspace = true }
aes-gcm = "0.10"
sha2 = "0.10"
chacha20poly1305 = "0.10"
hmac = "0.12"
ed25519-dalek = "2.0.0-rc.2"
signature = "2.1"
ecdsa = { version = "0.16", features = ["der"] }
p256 = "0.13"
p384 = "0.13"
# TODO: Uncomment this once p521 crate is ready
# p521 = { version = "0.12", git = "https://github.com/RustCrypto/elliptic-curves", package = "p521" }
hkdf = "0.12"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
rand_core = "0.6"
rand_chacha = "0.3"
zeroize = "1.5"
thiserror = "1.0"

[dependencies.hpke]
version = "0.10"
features = ["x25519", "p256", "p384", "xyber768d00", "serde_impls"]

[target.'cfg(not(target_os = "ios"))'.dependencies]
core-crypto-keystore = { version = "^1.0.0-pre.7", path = "../keystore" }

[target.'cfg(target_os = "ios")'.dependencies]
core-crypto-keystore = { version = "^1.0.0-pre.7", path = "../keystore", features = ["ios-wal-compat"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
uuid = { version = "1.0", features = ["v4", "js"] }
openmls = { version = "0.20", default-features = false }
rstest = "0.17"
rstest_reuse = "0.5"
async-std = { version = "1.12", features = ["attributes"] }
cfg-if = "1.0"
hex-literal = "0.4"
mls-crypto-provider = { path = ".", features = ["raw-rand-access"] }
