[package]
name = "obfuscate"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[dependencies]
derive_more.workspace = true
hex.workspace = true
log.workspace = true
openmls_basic_credential.workspace = true
openmls.workspace = true
rand.workspace = true
sha2.workspace = true

[lints]
workspace = true
