[package]
name = "obfuscate"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more.workspace = true
hex.workspace = true
log.workspace = true
openmls = { workspace = true, optional = true }
openmls_basic_credential = { workspace = true, optional = true }
rand.workspace = true
sha2.workspace = true

[lints]
workspace = true

[features]
default = []
