[package]
name = "test-wire-server"
description = "A program that imitates a Wire server for testing purposes"
version = "0.13.0"
edition = "2024"
license = "MPL-2.0"
publish = false
rust-version = "1.90"

[dependencies]
base64 = { workspace = true }
hyper = { workspace = true, features = ["server"] }
http = { workspace = true }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
rusty-jwt-tools = { version = "0.13.0", path = "../jwt" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
url = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
