[package]
name = "test-wire-server"
description = "A program that imitates a Wire server for testing purposes"
version = "0.13.0"
edition = "2024"
license = "MPL-2.0"
publish = false

[target.'cfg(not(target_family = "wasm"))'.dependencies]
base64 = { workspace = true }
hyper = { workspace = true, features = ["server"] }
http = { workspace = true }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
rusty-jwt-tools = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
url = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]

[lints]
workspace = true
