[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
femme = "2.2"
log = "0.4"
color-eyre = "0.6"
clap = { version = "4", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
semver = "1.0"
cargo = "0.81.0"
git2 = "0.18.3"   # Keep it in sync with the required cargo version
toml_edit = "0.22.17"  # Keep it in sync with the required cargo version
