[package]
name = "core-distribution-service"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
license-file = "LICENSE"

[features]
default = ["sqlx-sqlite"]
ws = ["actix-web-actors"]
gql = ["async-graphql", "async-graphql-actix-web"]
gql_playground = ["gql"]
sqlx-sqlite = ["sea-orm/sqlx-sqlite"]
sqlx-mysql = ["sea-orm/sqlx-mysql"]
sqlx-postgres = ["sea-orm/sqlx-postgres"]

[dependencies]
dotenv = "0.15"
listenfd = "0.5"
actix = "0.12"
actix-web = "4.0.0-rc"
actix-web-actors = { version = "4.0.0-beta", optional = true }
actix-cors = "0.6.0-beta"
actix-identity = "0.4.0-beta"
thiserror = "1.0"
color-eyre = "0.6"
tracing = "0.1"
# tracing-actix-web = "0.5.0-beta" # FIXME: Not up to date
tracing-subscriber = "0.3"
async-graphql-actix-web = { version = "3.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
actix-utils = "3.0"
hex = "0.4"
uuid = "0.8"
futures-util = "0.3"
redis = { version = "0.21", default-features = false, features = ["tokio-comp", "streams"] }


[dependencies.sea-orm]
version = "0.6"
features = ["macros", "runtime-actix-rustls"]
default-features = false

[dependencies.async-graphql]
version = "3.0"
features = ["tracing", "apollo_tracing", "apollo_persisted_queries", "dataloader"]
optional = true
