[package]
name = "interop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
femme = "2.2"
log = "0.4"
dirs = "4.0"
tokio = { version = "1.20", features = ["full"] }
webdriver-install = "0.3"
fantoccini = "0.19"
xshell = "0.2"
warpy = "0.2"
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
core-crypto = { path = "../crypto" }

