[package]
name = "keystore-regression-versions"
version = "0.0.0"
edition = "2021"
resolver = "2"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
color-eyre = "0.6"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
cfg-if = "1"
indicatif = { version = "0.17", features = ["futures"] }

