[package]
name = "wasm-browser-run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["process", "net"] }
# Http Server
warp = "0.3"
# Webdriver stuff
webdriver-install = "0.3"
fantoccini = "0.19"
# Utils
thiserror = "1.0"
eyre = "0.6"
bitflags = "1.3"
const_format = "0.2"
dirs = "4.0"
url = "2.3"
reqwest = "0.11"
