[package]
name = "wasm-browser-run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["process", "net"] }
# Http Server
warp = "0.3"
# Webdriver stuff
webdriver-install = "0.3"
# fantoccini = "0.19"
fantoccini = { git = "https://github.com/otak/fantoccini", branch = "feat/session-handshake" }
# Utils
thiserror = "1.0"
eyre = "0.6"
bitflags = "1.3"
const_format = "0.2"
dirs = "4.0"
url = "2.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3"
futures-util = "0.3.25"
wasm-bindgen = "0.2"
walrus = "0.19"
hex = "0.4"
wasm-bindgen-cli-support = "0.2"
log = "0.4"
tokio-tungstenite = "0.18"
ordered-float = { version = "3.4", features = ["serde"] }
serde-enum-str = "0.2.5"
