[package]
name = "wasm-browser-run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["process", "net"] }
tokio-stream = "0.1"
warp = "0.3"
# Utils
thiserror = "1.0"
eyre = "0.6"
bitflags = "2.1"
const_format = "0.2"
dirs = "5.0"
url = "2.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "wasmbind", "serde"] }
semver = { version = "1.0", features = ["serde"] }
tempfile = "3.3"
futures-util = "0.3"
wasm-bindgen = "0.2"
walrus = "0.19"
hex = "0.4"
wasm-bindgen-cli-support = "0.2"
tokio-tungstenite = "0.20"
ordered-float = { version = "3.4", features = ["serde"] }
serde-enum-str = "0.3"
better_term = "1.3"
indicatif = "0.17"
xshell = "0.2"
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
tracing = "0.1"

[dependencies.fantoccini]
#version = "0.19"
git = "https://github.com/otak/fantoccini"
branch = "feat/session-handshake"
