[package]
name = "wasm-browser-test-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-browser-run = { path = "../wasm-browser-run" }
tokio = { version = "1.21", features = ["full"] }
color-eyre = "0.6"
clap = { version = "4.0", features = ["derive"] }
pretty_env_logger = "0.4"
log = "0.4"

