[package]
name = "cc-keystore-support"
version = "0.0.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
